maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:64: error: expected class or object definition
	def aBiscuit(x:Int, y:Int):Boolean = hasBaggle(x,y)
        ^ShortestPathMaze:65: error: expected class or object definition
	def aMurNord(x:Int, y:Int):Boolean = hasTopWall(x,y)
        ^ShortestPathMaze:66: error: expected class or object definition
	def aMurOuest(x:Int, y:Int):Boolean = hasLeftWall(x, y)
        ^ShortestPathMaze:67: error: Unmatched closing brace '}' ignored here
}
^